--- a/Frontend/jsconfig.json
+++ b/Frontend/jsconfig.json
@@ -5,5 +5,5 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "frontend/src/components/ui/tabs.jsx", "frontend/src/components/ui/progress.jsx", "frontend/src/components/ui/accordion.jsx", "frontend/src/components", "frontend/src/services", "frontend/src/lib", "frontend/src/context"]
 }
